# Lbp_SVM

./: CMakeLists.txt  README.md
include/: CMakeCache.txt  Makefile  cmake_install.cmake
src/: main.cpp
